OpenHealth/force-app/main/default/force-app/main/default/objects/Schedule__c/AvailabilityStatus__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityStatus__c</fullName>
    <label>AvailabilityStatus</label>
    <type>Text</type>
    <length>255</length>
</CustomField>