OpenHealth/force-app/main/default/force-app/main/default/objects/Schedule__c/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <label>Doctor</label>
    <type>Lookup</type>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipName>DoctorSchedule</relationshipName>
</CustomField>