OpenHealth/force-app/main/default/force-app/main/default/objects/Schedule__c/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>EndTime</label>
    <type>Time</type>
</CustomField>