OpenHealth/force-app/main/default/force-app/main/default/objects/Schedule__c/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>StartTime</label>
    <type>Time</type>
    <length>255</length>
</CustomField>