OpenHealth/force-app/main/default/force-app/main/default/objects/Schedule__c/WorkDate__c.field-meta.xml
<CustomField>
    <fullName>WorkDate__c</fullName>
    <label>WorkDate</label>
    <type>Date</type>
</CustomField>